--- a/package.json
+++ b/package.json
@@ -5,19 +5,26 @@
   "main": "src/main.js",
   "scripts": {
     "server": "node ./src/main.js",
-    "lint": "eslint --ext .js src --fix"
+    "lint": "eslint --ext .js src --fix",
+    "test": "make test"
   },
   "license": "MIT",
-  "devDependencies": {
-    "eslint": "^5.8.0",
+  "dependencies": {
     "joi": "^14.0.3",
     "koa": "^2.6.1",
-    "koa-bodyparser": "^4.2.1",
+    "koa-body": "^4.0.4",
     "koa-compose": "^4.1.0",
+    "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
-    "lint-staged": "^8.0.4",
     "lodash": "^4.17.11",
     "query-string": "^6.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.8.0",
+    "lint-staged": "^8.0.4",
+    "mocha": "^5.2.0",
+    "should": "^13.2.3",
+    "supertest": "^3.3.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
