--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@koa/cors": "^2.2.2",
     "joi": "^14.0.3",
     "koa": "^2.6.1",
     "koa-body": "^4.0.4",
