--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.11",
-    "query-string": "^6.2.0"
+    "query-string": "^6.2.0",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
