--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "server": "node ./src/main.js",
+    "install": "npm install pm2 -g",
+    "server": "pm2 start ./src/main.js & pm2 monit",
+    "stop": "pm2 stop main",
     "lint": "eslint --ext .js src --fix",
     "test": "make test"
   },
