--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "MIT",
   "dependencies": {
     "@koa/cors": "^2.2.2",
+    "http": "^0.0.0",
+    "https": "^1.0.0",
     "joi": "^14.0.3",
     "koa": "^2.6.1",
     "koa-body": "^4.0.4",
